--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-<header>
-<img src="resources/images/img-myt-logo.jpg">
-</header>
-    
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+        <span>My Times</span>
+      </div>
+      <nav>
+      	<span><a href="#">World</a></span>
+      	<span><a href="#">U.S.</a></span>
+      	<span><a href="#">Tech</a></span>
+      	<span><a href="#">Science</a></span>
+      </nav>
+    </header>
+
+    <!--Content body-->
+    <div class="column">
+  <div class="large"></div>
+  <div class="medium"> </div>
+  <div class="small"></div>
+    </div>
+
   </body>
 </html>
