--- a/index.html
+++ b/index.html
@@ -20,38 +20,53 @@
 
     </header>
 
-<!--container-->
 
 <div class="container">
+<!--container-->
+
 <div class="column">
+<!--column-->
 
-
-
-
-
-  <!--Large-->
+<!--Large Column-->
 <div class=" large">
-  <!--Large Mainstory-->
+    <!--Large Mainstory-->
+    <div class="box1">
 <div class="mainstory">
 <h1> Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny." </h1>
 </div>
 <p> MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
 </p>
-<!--Large Substory-->
+  </div>
+  <!--Large Substory-->
+                <!--Largebox bottombox1-->
+<div class="box2n3">
+                  <div class="box2">
+<div class="orca">
 <h3>Orca Spends Vacation at Land World Puget </h3>
 <p> PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
-</p>
+</p> </div>
 <!--Large Substory-->
-<div class="substory1">
+<div class="earth">
 <h2> Earth Spins Backwards for 2017 </h2>
 </div>
+</div>
+
+                  <!--largebox bottombox1-->
+
+                  <!--Largebox bottombox2-->
+                  <div class="box3">
+<div class="breakfast">
 <h3> Burger for Breakfast: How Early is too Early? </h3>
 <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
 </p>
-<!--Large Camera-->
-<div class="camera">
-<h2> Research Shows Camera Erase Memory </h2>
 </div>
+
+<div class="camera">
+<h2> Research Shows Camera Erase Memory </h2> </div>
+</div>
+</div>
+                <!--Largebox bottombox2-->
+<!--Large Column-->
 </div>
 
 
@@ -75,7 +90,10 @@
 <h3> NEWS BITES </h3>
 <p> Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can </p>
  </div>
+
+<!--column-->
 </div>
+<!--container-->
 </div>
 
 
