--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+  <div class="header">
     <header>
       <div class="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
@@ -19,9 +20,10 @@
       </nav>
 
     </header>
+  </div>
 
 
-<div class="container">
+<!--<div class="container">-->
 <!--container-->
 
 <div class="column">
@@ -94,7 +96,7 @@
 <!--column-->
 </div>
 <!--container-->
-</div>
+<!--</div>-->
 
 
 
