--- a/index.html
+++ b/index.html
@@ -90,14 +90,36 @@
 <div class="small">
   <img src="./resources/images/img-news-bite.png">
 <h3> NEWS BITES </h3>
-<p> Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can </p>
+<div class="options">
+<span>Cat Emoji Goes Viral </span>
+<span> Buy Youtube Views </span>
+<span> Home Business Advertising </span>
+<span> Advertising Internet Online </span>
+<span> Illustration in Marketing Materials </span>
+<span> Finally a Top Secret Way You Can </span>
+</div>
  </div>
 
 <!--column-->
 </div>
 <!--container-->
 <!--</div>-->
+<footer>
+  <div class="foot1">
+<h1> MYTimes </h1>
+<nav>
+  <span><a href="#">World</a></span>
+  <span><a href="#">U.S.</a></span>
+  <span><a href="#">Tech</a></span>
+  <span><a href="#">Science</a></span>
+</nav>
+</div>
+<div class="foot2">
+<span> &copy 2016, My Times (A Division of Codeacademy bite) </span>
+</div>
 
+
+</footer>
 
 
 
